Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-561

ParquetFileReader::Contents PIMPL missing a virtual destructor

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • cpp-1.0.0
    • parquet-cpp
    • None
    • Patch

    Description

      As ParquetFileReader::Contents does not have a virtual destructor, the destructors of the child classes, i.e. SerializedFile are not called and thus all member of it leak memory.

      Attachments

        Activity

          People

            uwe Uwe Korn
            uwe Uwe Korn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: