PARQUET-561: Add destructor to PIMPL

Without this destuctor, the SerializedFile class cannot be destructed and leaks memory.

Author: Uwe L. Korn <uwelk@xhochy.com>

Closes #77 from xhochy/destructor-for-pimpl and squashes the following commits:

0f80966 [Uwe L. Korn] Add destructor to PIMPL

Change-Id: Ibea8b4d159bb49e9eaedf26534d42d6d592456e8